@@ -1,3 +1,14 @@
+Tue Aug 31 16:23:49 1993  Kevin Layer  (layer@sole)
+
+	* fi-site-init.el: fi::emacs-type, which tells which type of emacs
+	we are running; install fix for fi::build-time.
+
+	* Makefile: load fi-version.el at byte-compile time
+
+	* fi-keys.el: fi::emacs-type
+	* fi-leep.el: fi::emacs-type
+	* fi-utils.el: fi::emacs-type
+
 *******************************************************************************
 2.0.7, limited test release
 *******************************************************************************
